@@ -24,6 +24,28 @@
 #ifndef RcppCommon_h
 #define RcppCommon_h
 
+#define ___RCPP_HANDLE_CASE___( ___RTYPE___ , ___FUN___ , ___OBJECT___ , ___RCPPTYPE___ )	\
+	case ___RTYPE___ :																	\
+		return ___FUN___( ::Rcpp::___RCPPTYPE___< ___RTYPE___ >( ___OBJECT___ ) ) ;	
+		         
+#define ___RCPP_RETURN___( __FUN__, __SEXP__ , __RCPPTYPE__ )						\
+	SEXP __TMP__ = __SEXP__ ;															\
+	switch( TYPEOF( __TMP__ ) ){														\
+		___RCPP_HANDLE_CASE___( INTSXP  , __FUN__ , __TMP__ , __RCPPTYPE__ )			\
+		___RCPP_HANDLE_CASE___( REALSXP , __FUN__ , __TMP__ , __RCPPTYPE__ )			\
+		___RCPP_HANDLE_CASE___( RAWSXP  , __FUN__ , __TMP__ , __RCPPTYPE__ )			\
+		___RCPP_HANDLE_CASE___( LGLSXP  , __FUN__ , __TMP__ , __RCPPTYPE__ )			\
+		___RCPP_HANDLE_CASE___( CPLXSXP , __FUN__ , __TMP__ , __RCPPTYPE__ )			\
+		___RCPP_HANDLE_CASE___( STRSXP  , __FUN__ , __TMP__ , __RCPPTYPE__ )			\
+		___RCPP_HANDLE_CASE___( VECSXP  , __FUN__ , __TMP__ , __RCPPTYPE__ )			\
+		___RCPP_HANDLE_CASE___( EXPRSXP , __FUN__ , __TMP__ , __RCPPTYPE__ )			\
+	default:																			\
+		throw std::range_error( "not a vector" ) ;									\
+	}
+
+#define RCPP_RETURN_VECTOR( _FUN_, _SEXP_ )  ___RCPP_RETURN___( _FUN_, _SEXP_ , Vector ) 
+#define RCPP_RETURN_MATRIX( _FUN_, _SEXP_ )  ___RCPP_RETURN___( _FUN_, _SEXP_ , Matrix )
+
 /**
  * \brief Rcpp API
  */
@@ -103,6 +125,18 @@ namespace internal{
 // #else
 #define RcppExport extern "C"
 // #endif
+
+
+namespace Rcpp{
+namespace internal{
+template <typename T> int rcpp_call_test(T t){
+	return T::r_type::value ;
+}
+int rcpp_call_test_(SEXP) ;
+}
+}
+
+extern "C" SEXP rcpp_call_test(SEXP x) ;
 
 char *copyMessageToR(const char* const mesg);
 
